--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -392,12 +392,13 @@ footer {
 }
 
 #march-title {
-    display: flex;
-    flex-direction: column;
+    text-align: center;
+    font-family: Shizuru, sans-serif;
     font-size: 1.9em;
     letter-spacing: 4px;
-    margin: 65px 0 0 0;
-    text-decoration: underline;
+    margin-bottom: 2%;
+    background-color:rgb(236, 207, 77);
+    margin-left: 20px;
 }
 .pool-info {
     font-family: Fuzzy Bubbles, sans-serif;
@@ -407,22 +408,22 @@ footer {
 }
 .container-p p {
     position: relative;
-    display: grid;
-    margin: 0 0 0 13%;
-    grid-template-columns: 80%;
+    justify-content: center;
+    text-align: left;
     font-family: Fuzzy Bubbles, sans-serif;
-    font-size: 1.15em;
-    top: 470px;
+    font-size: 1.1em;
+    background-color:rgb(236, 207, 77);
+    margin-left: 20px;
 }
-.container-p {
-    background-image: url("../images/boxer-img.png");
-    width: 100%;
-    height: 100%;
-    position: relative;
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    grid-area: img1;
+.container-boxer {
+        background-image: url("../images/boxer-img.png");
+          width: 100%;
+          height: 100%;
+          position: relative;
+          background-size: contain;
+          background-position: top;
+          background-repeat: no-repeat;
+          grid-area: img1; 
 }
 
 .footer#footer-p {
@@ -431,11 +432,15 @@ footer {
 footer#footer{
     background-color: rgb(114, 184, 231);
 }
+#topnav.topnav a{
+    background-color:rgb(114, 184, 231);
+}
 
 
 /* Form */
 form {
     display: table;
+    position: relative;
 }
 
 label {
@@ -464,8 +469,8 @@ label {
 }
 
 .form-btn {
-    background-color: white;
-    border: 2px solid black;
+    background-color: rgb(236, 207, 77);
+    border: 4px dashed black;
     border-radius: 25px;
     color: red;
     font-family: Fuzzy Bubbles, sans-serif;
@@ -473,11 +478,15 @@ label {
     text-align: center;
     display: inline-block;
     font-size: 1.3em;
-    position: relative;
-    left: 59%;
-    top: 48%;
+    left: 11.5em;
+    top: 22em;
     cursor: pointer;
     text-decoration: none;
+    grid-area: img1;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 80%;
 }
 input {
     margin-right: 10px;
@@ -596,27 +605,19 @@ option {
         font-size: .75em;
     }
 
-div.container-1, div.container-p {
+div.container-1 {
     width: 100%;
     height: 120%;
 }
   div.container-1 p {
-    grid-template-columns: 50%;
     font-size: .5em;
-    top: 200px;
-}
-div.container-p p {
-    grid-template-columns: 70%;
-    font-size: .5em;
-    top: 12.3rem;
 }
 .form-btn {
-    font-size: .5em;
-    left: 62%;
-    top: 36%;
+    font-size: small;
 }
-span#march-title {
-    margin-bottom: 5px;
+.container-p p, #march-title {
+    margin-right: 20px;
+    font-size: 0.8em;
 }
 }
 @media screen and (min-width: 500px) and (max-width: 700px) {
@@ -855,43 +856,67 @@ span#march-title {
       }
 }
 /* Pool Page Media Query */
-@media screen and (min-width: 350px) and (max-width:400px) {
-    div.container-p p {
-        grid-template-columns: 70%;
-        font-size: .5em;
-        top: 13.2rem;
+/* @media  screen and (min-width: 320px) and (max-width:500px) {
+    #pool-body {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto 400px 400px auto auto;
+        grid-template-areas: 
+            "hd"
+            "text"
+            "img1"
+            "img3"
+            "auto"
+            "foot";
     }
-    .form-btn {
-        font-size: .5em;
-        left: 62%;
-        top: 38%;
+    .container-p {
+        background-position: top 0px right 10px;
     }
-}
-@media screen and (min-width: 400px) and (max-width:450px) {
     
+    div.container-p {
+        width: 100%;
+        height: 120%;
+    }
     div.container-p p {
-        grid-template-columns: 70%;
+        grid-template-columns: 50%;
+        grid-template-rows: auto;
         font-size: .5em;
-        top: 14.3rem;
-        left: 5%;
+        top: 13.5rem;
     }
     .form-btn {
         font-size: .5em;
-        left: 60%;
-        top: 45%;
+        left: 12rem;
+        top: 13.5rem;
     }
-}
-@media screen and (min-width: 450px) and (max-width:550px) {
+    #march-title {
+      position: relative;
+      top: auto;
+    }
 
+}   
+@media screen and (min-width: 340px) and (max-width:370px){
     div.container-p p {
-        grid-template-columns: 70%;
-        font-size: .5em;
-        top: 14.3rem;
-        left: 5%;
+        top: 15rem;
     }
     .form-btn {
-        font-size: .5em;
-        left: 60%;
-        top: 45%;
+        left: 14rem;
+        top: 15.5rem;
     }
+    }
+@media screen and (min-width: 370px) and (max-width:400px){
+div.container-p p {
+    top: 16rem;
 }
+.form-btn {
+    left: 15rem;
+    top: 16.5rem;
+}
+}
+@media screen and (min-width: 400px) and (max-width:450px){
+    div.container-p p {
+        top: 16rem;
+    }
+    .form-btn {
+        left: 15rem;
+        top: 16.5rem;
+    } */
