--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ header {
     width: 100%;
     grid-area: hd;
 }
-body {
+body{
     background-image: url("../images/stock-vector-hand-drawn-brown-and-black-colored-paw-prints-foot-prints-background-1368085664.jpg"); 
     background-position: center center;
     background-repeat: no-repeat;
@@ -398,7 +398,7 @@ footer {
     letter-spacing: 4px;
     margin-bottom: 2%;
     background-color:rgb(236, 207, 77);
-    margin-left: 20px;
+    margin: 0 20px 0 20px;
 }
 .pool-info {
     font-family: Fuzzy Bubbles, sans-serif;
@@ -413,7 +413,7 @@ footer {
     font-family: Fuzzy Bubbles, sans-serif;
     font-size: 1.1em;
     background-color:rgb(236, 207, 77);
-    margin-left: 20px;
+    margin:0 20px 0 20px;
 }
 .container-boxer {
         background-image: url("../images/boxer-img.png");
@@ -477,9 +477,7 @@ label {
     padding: 5px 10px;
     text-align: center;
     display: inline-block;
-    font-size: 1.3em;
-    left: 11.5em;
-    top: 22em;
+    font-size: 1.5em;
     cursor: pointer;
     text-decoration: none;
     grid-area: img1;
@@ -611,12 +609,14 @@ div.container-1 {
 }
   div.container-1 p {
     font-size: .5em;
+    position: relative;
+    top: 200px;
+    grid-template-columns: 50%;
 }
 .form-btn {
     font-size: small;
 }
 .container-p p, #march-title {
-    margin-right: 20px;
     font-size: 0.8em;
 }
 }
@@ -675,6 +675,13 @@ div.container-1 {
         font-size: .65em;
         top: 248px;
     }
+    .form-btn {
+        font-size: small;
+    }
+    .container-p p, #march-title {
+        font-size: 0.8em;
+    }
+
 }
 @media screen and (min-width: 700px) and (max-width: 900px) {
     div.topnav {
@@ -748,6 +755,12 @@ div.container-1 {
         font-size: 1.45em;
         margin-top: 50px;
     }
+    .form-btn {
+        font-size: medium;
+    }
+    .container-p p, #march-title {
+        font-size: 1em;
+    }
 }
 @media screen and (min-width: 900px) and (max-width: 980px) {
     div.topnav {
@@ -810,13 +823,25 @@ div.container-1 {
     .footer {
         font-size: .9em;
     }
+.form-btn {
+        font-size:medium;
+    }
+    .container-p p, #march-title {
+        font-size: 1em;
+    }
 }
 @media screen and (min-width: 980px) and (max-width: 1350px)   {
+    body#pool-body {
+        grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto 500px 500px auto;
+    }
+    .form-btn {
+        font-size:1.2em;
+    }
     .container-1 {
         width: 100%;
         height: 80%;
     }
-
       .container-1 p {
         grid-template-columns: 65%;
         font-size: .8em;
@@ -840,7 +865,7 @@ div.container-1 {
     div.topnav {
         display: none;
       }
-} 
+    }
 @media (min-width: 1850px) and (max-width: 2560px)  {
     .container-1 {
         width: 85%;
@@ -856,67 +881,8 @@ div.container-1 {
       }
 }
 /* Pool Page Media Query */
-/* @media  screen and (min-width: 320px) and (max-width:500px) {
-    #pool-body {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: auto auto 400px 400px auto auto;
-        grid-template-areas: 
-            "hd"
-            "text"
-            "img1"
-            "img3"
-            "auto"
-            "foot";
+@media screen and (min-width: 1350px) and (max-width: 2560px) {
+    body#pool-body {
+        grid-template-columns: 1fr 1fr;
     }
-    .container-p {
-        background-position: top 0px right 10px;
-    }
-    
-    div.container-p {
-        width: 100%;
-        height: 120%;
-    }
-    div.container-p p {
-        grid-template-columns: 50%;
-        grid-template-rows: auto;
-        font-size: .5em;
-        top: 13.5rem;
-    }
-    .form-btn {
-        font-size: .5em;
-        left: 12rem;
-        top: 13.5rem;
-    }
-    #march-title {
-      position: relative;
-      top: auto;
-    }
-
-}   
-@media screen and (min-width: 340px) and (max-width:370px){
-    div.container-p p {
-        top: 15rem;
-    }
-    .form-btn {
-        left: 14rem;
-        top: 15.5rem;
-    }
-    }
-@media screen and (min-width: 370px) and (max-width:400px){
-div.container-p p {
-    top: 16rem;
 }
-.form-btn {
-    left: 15rem;
-    top: 16.5rem;
-}
-}
-@media screen and (min-width: 400px) and (max-width:450px){
-    div.container-p p {
-        top: 16rem;
-    }
-    .form-btn {
-        left: 15rem;
-        top: 16.5rem;
-    } */
