--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -623,6 +623,19 @@ div.container-1 {
 .container-p p, #march-title {
     font-size: 0.8em;
 }
+table.time-table {
+    margin: 20px;
+    font-size: .8em;
+}
+table.time-table td, .time-table th {
+    border: 2px solid rgb(66, 147, 212);
+}
+.time-table th {
+    padding: 2px 2px;
+}
+.time-table td {
+    padding: 2px 2px;
+}
 }
 @media screen and (min-width: 500px) and (max-width: 700px) {
     body {
@@ -685,7 +698,19 @@ div.container-1 {
     .container-p p, #march-title {
         font-size: 0.8em;
     }
-
+    table.time-table {
+        margin: 20px;
+        font-size: .9em;
+    }
+    table.time-table td, .time-table th {
+        border: 3px solid rgb(66, 147, 212);
+    }
+    .time-table th {
+        padding: 3px 3px;
+    }
+    .time-table td {
+        padding: 3px 3px;
+    }
 }
 @media screen and (min-width: 700px) and (max-width: 900px) {
     div.topnav {
@@ -707,13 +732,11 @@ div.container-1 {
         width: 100%;
         height: 150%;
     }
-
       .container-1 p {
         grid-template-columns: 70%;
         font-size: .7em;
         top: 250px;
     }
-
     html, body {
         
         overflow-x: hidden;
@@ -726,7 +749,6 @@ div.container-1 {
         padding: 20px 0 0 0;
         font-size: .9em
     }
-
     .home,
     .pool,
     .playground,
@@ -735,16 +757,13 @@ div.container-1 {
         padding: 0 50% 0 50%;
         border-top: 1px solid white;
     }
-
     #logo {
         margin-bottom: 2%;
     }
-
     .intro-text-box,
     .intro-text-box1 {
         font-size: 1.2em;
     }
-
     .footer {
         font-size: .9em;
     }
@@ -764,6 +783,19 @@ div.container-1 {
     }
     .container-p p, #march-title {
         font-size: 1em;
+    }
+    table.time-table {
+        margin: 20px;
+        font-size: 1em;
+    }
+    table.time-table td, .time-table th {
+        border: 4px solid rgb(66, 147, 212);
+    }
+    .time-table th {
+        padding: 4px 4px;
+    }
+    .time-table td {
+        padding: 4px 4px;
     }
 }
 @media screen and (min-width: 900px) and (max-width: 980px) {
@@ -833,6 +865,19 @@ div.container-1 {
     .container-p p, #march-title {
         font-size: 1em;
     }
+    table.time-table {
+        margin: 20px;
+        font-size: 1em;
+    }
+    table.time-table td, .time-table th {
+        border: 4px solid rgb(66, 147, 212);
+    }
+    .time-table th {
+        padding: 4px 4px;
+    }
+    .time-table td {
+        padding: 4px 4px;
+    }
 }
 @media screen and (min-width: 980px) and (max-width: 1350px)   {
     body#pool-body {
@@ -854,6 +899,19 @@ div.container-1 {
     div.topnav {
         display: none;
       }
+      table.time-table {
+        margin: 20px;
+        font-size: 1.3em;
+    }
+    table.time-table td, .time-table th {
+        border: 5px solid rgb(66, 147, 212);
+    }
+    .time-table th {
+        padding: 5px 4px;
+    }
+    .time-table td {
+        padding: 5px 5px;
+    }
 } 
 @media (min-width: 1670px) and (max-width: 1850px)   {
     .container-1 {
